# sharepoint-mirror

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  config.ini.example  docker-compose.yml  pyproject.toml  wsgi.py
database/: schema.sql
database/migrations/: 002_composite_item_key.sql  003_quickxor_hash.sql  004_drive_table.sql  005_document_metadata.sql  006_sync_run_type.sql
src/sharepoint_mirror/: __init__.py  cli.py  db.py  quickxorhash.py
src/sharepoint_mirror/blueprints/: __init__.py  auth.py  documents.py  sql.py  sync.py  viewer.py
src/sharepoint_mirror/models/: __init__.py  delta_token.py  document.py  document_metadata.py  drive.py  file_blob.py  sync_event.py  sync_run.py
src/sharepoint_mirror/services/: __init__.py  export.py  sharepoint.py  storage.py  sync.py
src/sharepoint_mirror/static/css/: app.css
src/sharepoint_mirror/static/js/: app.js
src/sharepoint_mirror/templates/: base.html  index.html  sql.html
src/sharepoint_mirror/templates/auth/: login.html  login_sent.html
src/sharepoint_mirror/templates/documents/: _list.html  index.html  view.html
src/sharepoint_mirror/templates/sync/: _history.html  _refresh_metadata.html  _status.html  index.html  view.html
src/sharepoint_mirror/templates/viewer/: pdf.html  text.html
worker/: sync_worker.py
