[project]
name = "sharepoint-mirror"
version = "0.1.0"
description = "Mirror SharePoint documents locally for vector database ingestion"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0",
    "apsw>=3.45",
    "httpx>=0.27",
    "python-magic>=0.4",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
]
export = [
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sharepoint_mirror = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.ty.environment]
python-version = "3.14"
